Add some more runtime optimizations to immigrationAndFoundation and CoRealm